Arranges files into folders

--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ input {
 	height: 130px;
 	width:130px;
 
-	background-image: url("48icon.png");
+	background-image: url("../img/48icon.png");
 	background-repeat: no-repeat;
 	background-position: 41px 31px;
 
