--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,12 @@ input {
 .category.option {
 	border-left: 5px solid #FF2D19;
 }
+.category.donate {
+	margin-top: 100px;
+	border-left: 5px solid #f1e05a;
+	padding: 5px;
+	font-size:12px;
+}
 
 .category:hover {
 	border-width: 20px;
